--- a/Day2/index.html
+++ b/Day2/index.html
@@ -11,157 +11,179 @@
         <div class="card_wrapper">
             <div class="outer_card" style="width: 917px; height: 675px">
                 <div class="inner_card">
-                    <!--MAIN TITLE-->
-                    <div class="main_title">
-                        <!--Title-->
-                        <h2 class="main_header">Subscriptions</h2>
+                    <div class="inner_card_content">
+                        <!--MAIN TITLE-->
+                        <div class="main_title">
+                            <!--Title-->
+                            <h2 class="main_header">Subscriptions</h2>
 
-                        <!--Description-->
-                        <p class="desc">
-                            Support these creators by purchasing their monthly
-                            <br />
-                            subscriptions, and get access to premium content:
-                        </p>
+                            <!--Description-->
+                            <p class="desc">
+                                Support these creators by purchasing their
+                                monthly
+                                <br />
+                                subscriptions, and get access to premium
+                                content:
+                            </p>
 
-                        <!--Buttons-->
-                        <div class="buttons">
-                            <ul class="ul_radio">
+                            <!--Buttons-->
+                            <div class="buttons">
+                                <ul class="ul_radio">
+                                    <li>
+                                        <div class="bttn">
+                                            <img
+                                                class="button_img"
+                                                src="imgs/icons/source_files.svg"
+                                                alt="Source Files"
+                                            />
+                                            <input
+                                                class="radio_button"
+                                                type="radio"
+                                                name="type"
+                                                value="source_files"
+                                            />
+                                            <label for="source_files"
+                                                >Source Files</label
+                                            >
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="bttn">
+                                            <img
+                                                class="button_img"
+                                                src="imgs/icons/live_streams.svg"
+                                                alt="Source Files"
+                                            />
+                                            <input
+                                                class="radio_button"
+                                                type="radio"
+                                                name="type"
+                                                value="live_streams"
+                                            />
+                                            <label for="live_streams"
+                                                >Live Streams</label
+                                            >
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="bttn">
+                                            <img
+                                                class="button_img"
+                                                src="imgs/icons/meetup.svg"
+                                                alt="Source Files"
+                                            />
+                                            <input
+                                                class="radio_button"
+                                                type="radio"
+                                                name="type"
+                                                value="meetup"
+                                            />
+                                            <label for="meetup">Meetup</label>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <!--PERSONNEL CARDS-->
+                        <div class="personnel_cards">
+                            <ul class="ul_people">
                                 <li>
-                                    <div class="bttn">
+                                    <div class="arrow_div">
                                         <img
-                                            class="button_img"
-                                            src="imgs/icons/source_files.svg"
-                                            alt="Source Files"
+                                            class="left_arrow"
+                                            src="imgs/icons/left_arrow.svg"
+                                            alt="Previous"
                                         />
-                                        <input
-                                            class="radio_button"
-                                            type="radio"
-                                            name="type"
-                                            value="source_files"
-                                        />
-                                        <label for="source_files"
-                                            >Source Files</label
-                                        >
                                     </div>
                                 </li>
+
                                 <li>
-                                    <div class="bttn">
-                                        <img
-                                            class="button_img"
-                                            src="imgs/icons/live_streams.svg"
-                                            alt="Source Files"
-                                        />
-                                        <input
-                                            class="radio_button"
-                                            type="radio"
-                                            name="type"
-                                            value="live_streams"
-                                        />
-                                        <label for="live_streams"
-                                            >Live Streams</label
-                                        >
-                                    </div>
+                                    <form class="people_form" action="">
+                                        <ul class="ul_form">
+                                            <li class="li_photo">
+                                                <img
+                                                    class="photo"
+                                                    src="imgs/people/ludwig.svg"
+                                                    alt="Ludwig Lagos"
+                                                />
+                                            </li>
+                                            <li class="li_name">
+                                                Ludwig Lagos
+                                            </li>
+                                            <li class="li_job">Illustrator</li>
+                                            <li class="li_view_content">
+                                                <a
+                                                    class="view_content_text"
+                                                    href="#"
+                                                    >View Content</a
+                                                >
+                                            </li>
+                                        </ul>
+                                    </form>
                                 </li>
+
                                 <li>
-                                    <div class="bttn">
+                                    <form class="people_form" action="">
+                                        <ul class="ul_form">
+                                            <li class="li_photo">
+                                                <img
+                                                    class="photo"
+                                                    src="imgs/people/nina.svg"
+                                                    alt="Nina Valentine"
+                                                />
+                                            </li>
+                                            <li class="li_name">
+                                                Nina Valentine
+                                            </li>
+                                            <li class="li_job">3D Artist</li>
+                                            <li class="li_view_content">
+                                                <a
+                                                    class="view_content_text"
+                                                    href="#"
+                                                    >View Content</a
+                                                >
+                                            </li>
+                                        </ul>
+                                    </form>
+                                </li>
+
+                                <li>
+                                    <form class="people_form" action="">
+                                        <ul class="ul_form">
+                                            <li class="li_photo">
+                                                <img
+                                                    class="photo"
+                                                    src="imgs/people/karolina.svg"
+                                                    alt="Karolina Vargas"
+                                                />
+                                            </li>
+                                            <li class="li_name">
+                                                Karolina Vargas
+                                            </li>
+                                            <li class="li_job">Illustrator</li>
+                                            <li class="li_view_content">
+                                                <a
+                                                    class="view_content_text"
+                                                    href="#"
+                                                    >View Content</a
+                                                >
+                                            </li>
+                                        </ul>
+                                    </form>
+                                </li>
+
+                                <li>
+                                    <div class="arrow_div">
                                         <img
-                                            class="button_img"
-                                            src="imgs/icons/meetup.svg"
-                                            alt="Source Files"
+                                            class="right_arrow"
+                                            src="imgs/icons/right_arrow.svg"
+                                            alt="Next"
                                         />
-                                        <input
-                                            class="radio_button"
-                                            type="radio"
-                                            name="type"
-                                            value="meetup"
-                                        />
-                                        <label for="meetup">Meetup</label>
                                     </div>
                                 </li>
                             </ul>
                         </div>
-                    </div>
-
-                    <!--PERSONNEL CARDS-->
-                    <div class="personnel_cards">
-                        <ul class="ul_people">
-                            <li>
-                                <div class="arrow_div">
-                                    <img
-                                        class="left_arrow"
-                                        src="imgs/icons/left_arrow.svg"
-                                        alt="Previous"
-                                    />
-                                </div>
-                            </li>
-
-                            <li>
-                                <form class="people_form" action="">
-                                    <ul class="ul_form">
-                                        <li class="li_photo">
-                                            <img
-                                                class="photo"
-                                                src="imgs/people/ludwig.svg"
-                                                alt="Ludwig Lagos"
-                                            />
-                                        </li>
-                                        <li class="li_name">Ludwig Lagos</li>
-                                        <li class="li_job">Illustrator</li>
-                                        <li class="li_view_content">
-                                            <a class="view_content_text" href="#">View Content</a>
-                                        </li>
-                                    </ul>
-                                </form>
-                            </li>
-
-                            <li>
-                                <form class="people_form" action="">
-                                    <ul class="ul_form">
-                                        <li class="li_photo">
-                                            <img
-                                                class="photo"
-                                                src="imgs/people/nina.svg"
-                                                alt="Nina Valentine"
-                                            />
-                                        </li>
-                                        <li class="li_name">Nina Valentine</li>
-                                        <li class="li_job">3D Artist</li>
-                                        <li class="li_view_content">
-                                            <a class="view_content_text" href="#">View Content</a>
-                                        </li>
-                                    </ul>
-                                </form>
-                            </li>
-
-                            <li>
-                                <form class="people_form" action="">
-                                    <ul class="ul_form">
-                                        <li class="li_photo">
-                                            <img
-                                                class="photo"
-                                                src="imgs/people/karolina.svg"
-                                                alt="Karolina Vargas"
-                                            />
-                                        </li>
-                                        <li class="li_name">Karolina Vargas</li>
-                                        <li class="li_job">Illustrator</li>
-                                        <li class="li_view_content">
-                                            <a class="view_content_text" href="#">View Content</a>
-                                        </li>
-                                    </ul>
-                                </form>
-                            </li>
-
-                            <li>
-                                <div class="arrow_div">
-                                    <img
-                                        class="right_arrow"
-                                        src="imgs/icons/right_arrow.svg"
-                                        alt="Next"
-                                    />
-                                </div>
-                            </li>
-                        </ul>
                     </div>
                 </div>
             </div>
