edit hw3 & add day 4

--- a/Day2/index.html
+++ b/Day2/index.html
@@ -28,59 +28,47 @@
 
                             <!--Buttons-->
                             <div class="buttons">
-                                <ul class="ul_radio">
-                                    <li>
-                                        <div class="bttn">
-                                            <img
-                                                class="button_img"
-                                                src="imgs/icons/source_files.svg"
-                                                alt="Source Files"
-                                            />
-                                            <input
-                                                class="radio_button"
-                                                type="radio"
-                                                name="type"
-                                                value="source_files"
-                                            />
-                                            <label for="source_files"
-                                                >Source Files</label
-                                            >
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="bttn">
-                                            <img
-                                                class="button_img"
-                                                src="imgs/icons/live_streams.svg"
-                                                alt="Source Files"
-                                            />
-                                            <input
-                                                class="radio_button"
-                                                type="radio"
-                                                name="type"
-                                                value="live_streams"
-                                            />
-                                            <label for="live_streams"
-                                                >Live Streams</label
-                                            >
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="bttn">
-                                            <img
-                                                class="button_img"
-                                                src="imgs/icons/meetup.svg"
-                                                alt="Source Files"
-                                            />
-                                            <input
-                                                class="radio_button"
-                                                type="radio"
-                                                name="type"
-                                                value="meetup"
-                                            />
-                                            <label for="meetup">Meetup</label>
-                                        </div>
-                                    </li>
+                                <div class="subscriptions_links">
+                                    <div class="bttn">
+                                        <img
+                                            class="button_img"
+                                            src="imgs/icons/source_files.svg"
+                                            alt="Source Files"
+                                        />
+                                        <input
+                                            class="radio_button"
+                                            type="radio"
+                                            name="type"
+                                            value="source_files"
+                                        />
+                                        <label for="source_files"
+                                            >Source Files</label
+                                        >
+                                    </div>
+                                    <div class="bttn">
+                                        <img
+                                            class="button_img"
+                                            src="imgs/icons/live_streams.svg"
+                                            alt="Source Files"
+                                        />
+                                        <input
+                                            class="radio_button"
+                                            type="radio"
+                                            name="type"
+                                            value="live_streams"
+                                        />
+                                        <label for="live_streams"
+                                            >Live Streams</label
+                                        >
+                                    </div>
+                                    <a class="bttn">
+                                        <img
+                                            class="button_img"
+                                            src="imgs/icons/meetup.svg"
+                                            alt="Source Files"
+                                        />
+                                        <span>Meetup</span>
+                                    </a>
                                 </ul>
                             </div>
                         </div>
