--- a/Day2/index.html
+++ b/Day2/index.html
@@ -29,45 +29,29 @@
                             <!--Buttons-->
                             <div class="buttons">
                                 <div class="subscriptions_links">
-                                    <div class="bttn">
+                                    <a class="subscription_buttons">
                                         <img
                                             class="button_img"
                                             src="imgs/icons/source_files.svg"
                                             alt="Source Files"
                                         />
-                                        <input
-                                            class="radio_button"
-                                            type="radio"
-                                            name="type"
-                                            value="source_files"
-                                        />
-                                        <label for="source_files"
-                                            >Source Files</label
-                                        >
-                                    </div>
-                                    <div class="bttn">
+                                        <span class="button_text">Source Files</span>
+                                    </a>
+                                    <a class="subscription_buttons">
                                         <img
                                             class="button_img"
                                             src="imgs/icons/live_streams.svg"
-                                            alt="Source Files"
+                                            alt="Live Streams"
                                         />
-                                        <input
-                                            class="radio_button"
-                                            type="radio"
-                                            name="type"
-                                            value="live_streams"
-                                        />
-                                        <label for="live_streams"
-                                            >Live Streams</label
-                                        >
-                                    </div>
-                                    <a class="bttn">
+                                        <span class="button_text">Live Streams</span>
+                                    </a>
+                                    <a class="subscription_buttons">
                                         <img
                                             class="button_img"
                                             src="imgs/icons/meetup.svg"
-                                            alt="Source Files"
+                                            alt="Meet Up"
                                         />
-                                        <span>Meetup</span>
+                                        <span class="button_text">Meetup</span>
                                     </a>
                                 </ul>
                             </div>
